se terminan de migrar los servicios para consultas relaciondas con predios
