# src/api/controllers/rdm.parcel.controller.js
@@ -118,3 +118,279 @@ export async function getImageGeometryParcel(req, res) {
 
 }
 
+// get geometry terrain
+export async function getGeometryTerrain(req, res) {
+
+    const language = 'es';
+
+    try {
+
+        // data input
+        const terrainId = req.swagger.params.terrainId.value;
+        const municipalityId = req.swagger.params.municipality.value;
+
+        // validate terrain id
+        req.checkQuery("terrainId", getMessage('vu.parcels.terrain_required', language)).notEmpty();
+
+        // validate municipality
+        req.checkQuery("municipality", getMessage('vu.municipalities.municipality_required', language)).notEmpty();
+        req.checkQuery("municipality", getMessage('vu.municipalities.municipality_invalid', language)).isMongoId();
+
+        const errors = req.validationErrors();
+        if (errors) {
+            return badRequest(res, 400, { message: errors[0].msg });
+        }
+
+        const geometry = await ParcelImplementation.iGetGeometryTerrain(municipalityId, terrainId);
+
+        return result(res, 200, geometry);
+    } catch (exception) {
+        console.log("rmd.parcel@getGeometryTerrain ---->", exception);
+        if (exception.codeHttp && exception.key) {
+            return error(res, exception.codeHttp, { message: getMessage(exception.key, 'es') });
+        }
+        return error(res, 500, { message: 'Server error ...' });
+    }
+
+}
+
+// get information economic parcel
+export async function getInfoEconomicParcel(req, res) {
+
+    const language = 'es';
+
+    try {
+
+        // data input
+        const cadastralCode = req.swagger.params.cadastralCode.value;
+        const fmi = req.swagger.params.fmi.value;
+        const nupre = req.swagger.params.nupre.value;
+        const municipalityId = req.swagger.params.municipality.value;
+
+        // validate municipality
+        req.checkQuery("municipality", getMessage('vu.municipalities.municipality_required', language)).notEmpty();
+        req.checkQuery("municipality", getMessage('vu.municipalities.municipality_invalid', language)).isMongoId();
+
+        const errors = req.validationErrors();
+        if (errors) {
+            return badRequest(res, 400, { message: errors[0].msg });
+        }
+
+        const informationEconomic = await ParcelImplementation.iGetParcelEconomicInformation(municipalityId, cadastralCode, fmi, nupre);
+
+        return result(res, 200, informationEconomic);
+    } catch (exception) {
+        console.log("rmd.parcel@getInfoEconomicParcel ---->", exception);
+        if (exception.codeHttp && exception.key) {
+            return error(res, exception.codeHttp, { message: getMessage(exception.key, 'es') });
+        }
+        return error(res, 500, { message: 'Server error ...' });
+    }
+
+}
+
+// get information legal parcel
+export async function getInfoLegalParcel(req, res) {
+
+    const language = 'es';
+
+    try {
+
+        // data input
+        const cadastralCode = req.swagger.params.cadastralCode.value;
+        const fmi = req.swagger.params.fmi.value;
+        const nupre = req.swagger.params.nupre.value;
+        const municipalityId = req.swagger.params.municipality.value;
+
+        // validate municipality
+        req.checkQuery("municipality", getMessage('vu.municipalities.municipality_required', language)).notEmpty();
+        req.checkQuery("municipality", getMessage('vu.municipalities.municipality_invalid', language)).isMongoId();
+
+        const errors = req.validationErrors();
+        if (errors) {
+            return badRequest(res, 400, { message: errors[0].msg });
+        }
+
+        const informationLegal = await ParcelImplementation.iGetParcelLegalInformation(municipalityId, cadastralCode, fmi, nupre);
+
+        return result(res, 200, informationLegal);
+    } catch (exception) {
+        console.log("rmd.parcel@getInfoLegalParcel ---->", exception);
+        if (exception.codeHttp && exception.key) {
+            return error(res, exception.codeHttp, { message: getMessage(exception.key, 'es') });
+        }
+        return error(res, 500, { message: 'Server error ...' });
+    }
+
+}
+
+// get information physical parcel
+export async function getInfoPhysicalParcel(req, res) {
+
+    const language = 'es';
+
+    try {
+
+        // data input
+        const cadastralCode = req.swagger.params.cadastralCode.value;
+        const fmi = req.swagger.params.fmi.value;
+        const nupre = req.swagger.params.nupre.value;
+        const municipalityId = req.swagger.params.municipality.value;
+
+        // validate municipality
+        req.checkQuery("municipality", getMessage('vu.municipalities.municipality_required', language)).notEmpty();
+        req.checkQuery("municipality", getMessage('vu.municipalities.municipality_invalid', language)).isMongoId();
+
+        const errors = req.validationErrors();
+        if (errors) {
+            return badRequest(res, 400, { message: errors[0].msg });
+        }
+
+        const informationPhysical = await ParcelImplementation.iGetParcelPhysicalInformation(municipalityId, cadastralCode, fmi, nupre);
+
+        return result(res, 200, informationPhysical);
+    } catch (exception) {
+        console.log("rmd.parcel@getInfoPhysicalParcel ---->", exception);
+        if (exception.codeHttp && exception.key) {
+            return error(res, exception.codeHttp, { message: getMessage(exception.key, 'es') });
+        }
+        return error(res, 500, { message: 'Server error ...' });
+    }
+
+}
+
+// get information igac parcel
+export async function getInfoIgacParcel(req, res) {
+
+    const language = 'es';
+
+    try {
+
+        // data input
+        const cadastralCode = req.swagger.params.cadastralCode.value;
+        const fmi = req.swagger.params.fmi.value;
+        const nupre = req.swagger.params.nupre.value;
+        const municipalityId = req.swagger.params.municipality.value;
+
+        // validate municipality
+        req.checkQuery("municipality", getMessage('vu.municipalities.municipality_required', language)).notEmpty();
+        req.checkQuery("municipality", getMessage('vu.municipalities.municipality_invalid', language)).isMongoId();
+
+        const errors = req.validationErrors();
+        if (errors) {
+            return badRequest(res, 400, { message: errors[0].msg });
+        }
+
+        const informationIgac = await ParcelImplementation.iGetParcelIgacInformation(municipalityId, cadastralCode, fmi, nupre);
+
+        return result(res, 200, informationIgac);
+    } catch (exception) {
+        console.log("rmd.parcel@getInfoIgacParcel ---->", exception);
+        if (exception.codeHttp && exception.key) {
+            return error(res, exception.codeHttp, { message: getMessage(exception.key, 'es') });
+        }
+        return error(res, 500, { message: 'Server error ...' });
+    }
+
+}
+
+// get information party parcel
+export async function getInfoPartyParcel(req, res) {
+
+    const language = 'es';
+
+    try {
+
+        // data input
+        const cadastralCode = req.swagger.params.cadastralCode.value;
+        const fmi = req.swagger.params.fmi.value;
+        const nupre = req.swagger.params.nupre.value;
+        const municipalityId = req.swagger.params.municipality.value;
+
+        // validate municipality
+        req.checkQuery("municipality", getMessage('vu.municipalities.municipality_required', language)).notEmpty();
+        req.checkQuery("municipality", getMessage('vu.municipalities.municipality_invalid', language)).isMongoId();
+
+        const errors = req.validationErrors();
+        if (errors) {
+            return badRequest(res, 400, { message: errors[0].msg });
+        }
+
+        const informationParty = await ParcelImplementation.iGetParcelPartyInformation(municipalityId, cadastralCode, fmi, nupre);
+
+        return result(res, 200, informationParty);
+    } catch (exception) {
+        console.log("rmd.parcel@getInfoPartyParcel ---->", exception);
+        if (exception.codeHttp && exception.key) {
+            return error(res, exception.codeHttp, { message: getMessage(exception.key, 'es') });
+        }
+        return error(res, 500, { message: 'Server error ...' });
+    }
+
+}
+
+// get information affections parcel
+export async function getInfoAffectionsParcel(req, res) {
+
+    const language = 'es';
+
+    try {
+
+        // data input
+        const terrainId = req.swagger.params.terrainId.value;
+        const municipalityId = req.swagger.params.municipality.value;
+
+        // validate municipality
+        req.checkQuery("municipality", getMessage('vu.municipalities.municipality_required', language)).notEmpty();
+        req.checkQuery("municipality", getMessage('vu.municipalities.municipality_invalid', language)).isMongoId();
+
+        const errors = req.validationErrors();
+        if (errors) {
+            return badRequest(res, 400, { message: errors[0].msg });
+        }
+
+        await ParcelImplementation.iGetAffectations(municipalityId, terrainId);
+
+        return result(res, 200, {});
+    } catch (exception) {
+        console.log("rmd.parcel@getInfoPartyParcel ---->", exception);
+        if (exception.codeHttp && exception.key) {
+            return error(res, exception.codeHttp, { message: getMessage(exception.key, 'es') });
+        }
+        return error(res, 500, { message: 'Server error ...' });
+    }
+
+}
+
+// get information catastral parcel
+export async function getInfoCatastralParcel(req, res) {
+
+    const language = 'es';
+
+    try {
+
+        // data input
+        const terrainId = req.swagger.params.terrainId.value;
+        const municipalityId = req.swagger.params.municipality.value;
+
+        // validate municipality
+        req.checkQuery("municipality", getMessage('vu.municipalities.municipality_required', language)).notEmpty();
+        req.checkQuery("municipality", getMessage('vu.municipalities.municipality_invalid', language)).isMongoId();
+
+        const errors = req.validationErrors();
+        if (errors) {
+            return badRequest(res, 400, { message: errors[0].msg });
+        }
+
+        const informationCatastral = await ParcelImplementation.iGetParcelCatastralCodeInformation(municipalityId, terrainId);
+
+        return result(res, 200, informationCatastral);
+    } catch (exception) {
+        console.log("rmd.parcel@getInfoCatastralParcel ---->", exception);
+        if (exception.codeHttp && exception.key) {
+            return error(res, exception.codeHttp, { message: getMessage(exception.key, 'es') });
+        }
+        return error(res, 500, { message: 'Server error ...' });
+    }
+
+}
